--- a/projects.html
+++ b/projects.html
@@ -10,15 +10,13 @@
 </head>
 <body>
 
-    <!-- Navigation -->
-    <header>
-        <nav class="navbar">
-            <a href="index.html">Home</a>
-            <a href="projects.html" class="active">Projects</a>
-            <a href="publications.html">Publications</a>
-            <a href="about.html">About</a>
-        </nav>
-    </header>
+    <!-- Navbar/Header (same as in index.html) -->
+  <nav class="navbar">
+    <a href="index.html">Home</a>
+    <a href="projects.html" class="active">Projects</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
+  </nav>
 
     <!-- Projects Section -->
     <section class="projects-section">
