--- a/projects.html
+++ b/projects.html
@@ -22,12 +22,12 @@
             </p>
             <!-- Multiple PDF Links -->
             <div>
-                <a href="https://www.nature.com/articles/s41467-023-41812-7" target="_blank" style="text-decoration: none; color: #000; display: inline-block; margin-top: 10px;">
+                <a href="https://www.nature.com/articles/s41467-023-41812-7" target="_blank" style="text-decoration: none; color: #1e1e1e; display: inline-block; margin-top: 10px;">
                     <i class="fas fa-file-pdf" style="color: #d32f2f; font-size: 1.5em;"></i> View publication 1
                 </a>
             </div>
             <div>
-                <a href="https://onlinelibrary.wiley.com/doi/abs/10.1111/geb.13167" target="_blank" style="text-decoration: none; color: #000; display: inline-block; margin-top: 10px;">
+                <a href="https://onlinelibrary.wiley.com/doi/abs/10.1111/geb.13167" target="_blank" style="text-decoration: none; color: #1e1e1e; display: inline-block; margin-top: 10px;">
                     <i class="fas fa-file-pdf" style="color: #d32f2f; font-size: 1.5em;"></i> View publication 2
                 </a>
             </div>
@@ -49,12 +49,12 @@
             </p>
             <!-- Multiple PDF Links -->
             <div>
-                <a href="https://onlinelibrary.wiley.com/doi/full/10.1111/geb.13559" target="_blank" style="text-decoration: none; color: #000; display: inline-block; margin-top: 10px;">
+                <a href="https://onlinelibrary.wiley.com/doi/full/10.1111/geb.13559" target="_blank" style="text-decoration: none; color: #1e1e1e; display: inline-block; margin-top: 10px;">
                     <i class="fas fa-file-pdf" style="color: #d32f2f; font-size: 1.5em;"></i> View publication 1
                 </a>
             </div>
             <div>
-                <a href="https://www.journals.uchicago.edu/doi/full/10.1086/716171" target="_blank" style="text-decoration: none; color: #000; display: inline-block; margin-top: 10px;">
+                <a href="https://www.journals.uchicago.edu/doi/full/10.1086/716171" target="_blank" style="text-decoration: none; color: #1e1e1e; display: inline-block; margin-top: 10px;">
                     <i class="fas fa-file-pdf" style="color: #d32f2f; font-size: 1.5em;"></i> View publication 2
                 </a>
             </div>
@@ -75,12 +75,12 @@
             </p>
             <!-- Multiple PDF Links -->
             <div>
-                <a href="https://onlinelibrary.wiley.com/doi/full/10.1111/geb.13802" target="_blank" style="text-decoration: none; color: #000; display: inline-block; margin-top: 10px;">
+                <a href="https://onlinelibrary.wiley.com/doi/full/10.1111/geb.13802" target="_blank" style="text-decoration: none; color: #1e1e1e; display: inline-block; margin-top: 10px;">
                     <i class="fas fa-file-pdf" style="color: #d32f2f; font-size: 1.5em;"></i> View publication 1
                 </a>
             </div>
             <div>
-                <a href="https://academic.oup.com/evolut/article/74/9/2046/6727281" target="_blank" style="text-decoration: none; color: #000; display: inline-block; margin-top: 10px;">
+                <a href="https://academic.oup.com/evolut/article/74/9/2046/6727281" target="_blank" style="text-decoration: none; color: #1e1e1e; display: inline-block; margin-top: 10px;">
                     <i class="fas fa-file-pdf" style="color: #d32f2f; font-size: 1.5em;"></i> View publication 2
                 </a>
             </div>
