--- a/about.html
+++ b/about.html
@@ -32,12 +32,12 @@
         <p>When I'm not immersed in research, I enjoy being outdoors. I like playing football, volleyball, paddleboarding, and hiking. These activities keep me active and deepen my appreciation for the environment.</p>
 
         <!-- Nature Images -->
-        <div class="nature-images">
-            <img src="pic1.jpeg" alt="Nature Photo 1">
-            <img src="pic2.jpeg" alt="Nature Photo 2">
-            <img src="pic3.jpeg" alt="Nature Photo 3">
-            <img src="pic4.jpeg" alt="Nature Photo 4">
-            <img src="pic5.jpeg" alt="Nature Photo 5">
+        <div class="nature-images" style="display: flex; justify-content: space-between; gap: 15px;">
+            <img src="pic1.jpeg" alt="Nature Photo 1" style="width: 100%; max-width: 200px; height: auto; object-fit: cover;">
+            <img src="pic2.jpeg" alt="Nature Photo 2" style="width: 100%; max-width: 200px; height: auto; object-fit: cover;">
+            <img src="pic3.jpeg" alt="Nature Photo 3" style="width: 100%; max-width: 200px; height: auto; object-fit: cover;">
+            <img src="pic4.jpeg" alt="Nature Photo 4" style="width: 100%; max-width: 200px; height: auto; object-fit: cover;">
+            <img src="pic5.jpeg" alt="Nature Photo 5" style="width: 100%; max-width: 200px; height: auto; object-fit: cover;">
         </div>
 
         <h2>Professional Experience</h2>
