--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
         <p>When I'm not immersed in research, I enjoy being outdoors. I like playing football, volleyball, paddleboarding, and hiking. These activities keep me active and deepen my appreciation for the environment.</p>
 
         <!-- Nature Images -->
-        <div class="nature-images" style="display: flex; justify-content: space-between; gap: 15px;">
+        <div class="nature-images" style="display: flex; justify-content: space-between; gap: 15px; flex-wrap: wrap;">
             <img src="pic1.jpeg" alt="Nature Photo 1" style="width: 100%; max-width: 200px; height: auto; object-fit: cover;">
             <img src="pic2.jpeg" alt="Nature Photo 2" style="width: 100%; max-width: 200px; height: auto; object-fit: cover;">
             <img src="pic3.jpeg" alt="Nature Photo 3" style="width: 100%; max-width: 200px; height: auto; object-fit: cover;">
