--- a/about.html
+++ b/about.html
@@ -24,15 +24,15 @@
     </header>
 
     <!-- Main Content Section (About Me Section) -->
-    <section class="profile-section">
-        <div class="right-column">
-            <h1>About Me!</h1>
+    <section class="about-section">
+        <div class="container">
+            <h1>About Me</h1>
 
             <p>Since high school, I've known I wanted to be a biologist. My passion for ecology and the complex mechanisms of nature was ignited during my bachelor’s studies. Originally from <a href="https://pt.wikipedia.org/wiki/Ivor%C3%A1" target="_blank">Ivorá</a>, a charming countryside town nestled between the Atlantic Forest and the Pampa grasslands in southern Brazil, my roots have deeply influenced my love for the natural world. I pursued my undergraduate and graduate studies in Santa Maria, Rio Grande do Sul, Brazil, where my academic journey started. </p>
 
             <p>When I'm not immersed in research, I enjoy being outdoors. I like playing football, volleyball, paddleboarding, and hiking. These activities keep me active and deepen my appreciation for the environment.</p>
 
-            <!-- Nature Images with Flexbox for neat alignment -->
+            <!-- Nature Images with Flexbox for responsive alignment -->
             <div class="nature-images">
                 <img src="pic1.jpeg" alt="Nature Photo 1">
                 <img src="pic2.jpeg" alt="Nature Photo 2">
