--- a/index.html
+++ b/index.html
@@ -1,84 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Felipe O. Cerezer - Home</title>
-  <link rel="stylesheet" href="style.css" />
-
-  <!-- Optional: Include Font Awesome for consistency with About -->
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-  />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Felipe Cerezer - Data Science & Research</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body id="home-page">
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="publications.html">Publications</a></li>
+            </ul>
+        </nav>
+    </header>
 
-  <!-- Header Navigation -->
-  <header>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="projects.html">Projects</a>
-      <a href="publications.html">Publications</a>
-      <a href="about.html">About</a>
-    </nav>
-  </header>
+    <main>
+        <section id="home-intro">
+            <h1>Welcome to My Personal Website</h1>
+            <p>Welcome! I'm Felipe Cerezer, a researcher and data scientist focusing on macroecology, macroevolution, and biogeography. On this site, you'll find information about my work, ongoing projects, and publications.</p>
+        </section>
 
-  <!-- Main Content Section -->
-  <section class="profile-section">
-    <!-- Left Column: Photo -->
-    <div class="left-column">
-      <img src="profile_pic.jpeg" alt="Felipe O. Cerezer" class="profile-img" />
+        <section id="highlighted-projects">
+            <h2>Featured Projects</h2>
+            <div class="project">
+                <h3>Spatial Analysis for Retail Site Selection</h3>
+                <p>Using spatial analysis and machine learning techniques to identify optimal retail locations. A cutting-edge approach that bridges data science with urban development.</p>
+                <a href="projects.html">Read More</a>
+            </div>
 
-      <!-- Social Icons below the profile picture -->
-      <div class="social-icons">
-        <a
-          href="https://scholar.google.com/citations?user=wUiHfVoAAAAJ&hl=pt-BR"
-          target="_blank"
-          title="Google Scholar"
-        >
-          <img src="google.svg" alt="Google Scholar" />
-        </a>
-        <a
-          href="https://www.researchgate.net/profile/Felipe-Cerezer?ev=hdr_xprf"
-          target="_blank"
-          title="ResearchGate"
-        >
-          <img
-            src="https://upload.wikimedia.org/wikipedia/commons/5/5e/ResearchGate_icon_SVG.svg"
-            alt="ResearchGate"
-          />
-        </a>
-        <a
-          href="https://bsky.app/profile/cerezer.bsky.social"
-          target="_blank"
-          title="Bluesky"
-        >
-          <img src="bluesky.svg" alt="Bluesky" />
-        </a>
-      </div>
-    </div>
+            <div class="project">
+                <h3>Species Richness in Terrestrial Tetrapods</h3>
+                <p>Exploring large-scale patterns in species diversity across terrestrial tetrapod clades, focusing on ecological and evolutionary influences on species richness.</p>
+                <a href="projects.html">Read More</a>
+            </div>
+        </section>
+    </main>
 
-    <!-- Right Column: Text Content -->
-    <div class="right-column">
-      <div class="profile-name">Felipe O. Cerezer</div>
-
-      <h3>Macroecology, Evolutionary Biology & Biogeography</h3>
-
-      <p>
-        Welcome!<br /><br />
-        I am a Brazilian scientist passionate about understanding the diversity of life on Earth. My research in macroecology,
-        evolutionary biology, and biogeography uncovers the amazing patterns and processes that sculpt biodiversity among clades,
-        regions, and time. Join me as I explore how life evolves, adapts, and thrives in our ever-changing world!
-      </p>
-
-      <div class="footer-links">
-        <p>If you're interested in learning more or collaborating, feel free to reach out.</p>
-        <a href="CV_Felipe_Cerezer.pdf" target="_blank" title="Download CV">For more details, check out my CV (PDF)</a>
-      </div>
-    </div>
-  </section>
-
+    <footer>
+        <p>© 2025 Felipe Cerezer. All rights reserved.</p>
+    </footer>
 </body>
 </html>
