--- a/publications.html
+++ b/publications.html
@@ -1,172 +1,44 @@
-<h2>List of Peer-Reviewed Publications</h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Felipe Cerezer - Publications</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="publications.html">Publications</a></li>
+            </ul>
+        </nav>
+    </header>
 
-<ul>
-  <li>
-    Storck, T. R., do Amaral, A. M. B., da Cruz, T. K. T., Schneider, S. I., Cerezer, F. O., de Oliveira, J. A., ... & Clasen, B. (2025). 
-    <i>Anthropogenic actions alter the aquatic environment quality: biomonitoring study of a river in Southern Brazil</i>. 
-    <em>Aquatic Ecology</em>, 59(1), 185-202. 
-    <a href="https://doi.org/10.1007/s10452-024-10156-9" target="_blank">https://doi.org/10.1007/s10452-024-10156-9</a>
-  </li>
+    <main>
+        <section id="publications">
+            <h1>Selected Publications</h1>
+            <p>Browse through my academic publications that explore the relationships between species, environment, and ecological dynamics.</p>
 
-  <li>
-    Cerezer, F. O., Campos, A. B., Dambros, C. S., Maestri, R., Bubadué, J. M., & Cáceres, N. C. (2024). 
-    <i>Rodents show darker and redder coloration in warm and rainy environments</i>. 
-    <em>Global Ecology and Biogeography</em>, 33(3), 426-438. 
-    <a href="https://doi.org/10.1111/geb.13802" target="_blank">https://doi.org/10.1111/geb.13802</a>
-  </li>
+            <div class="publication">
+                <h2>Understanding Species Richness Patterns Across Tetrapod Clades</h2>
+                <p>Published in <em>Global Ecology and Biogeography</em>, this paper investigates how ecological and evolutionary forces shape species richness in terrestrial tetrapod clades.</p>
+                <a href="https://example.com" target="_blank">Read Paper</a>
+            </div>
 
-  <li>
-    Cerezer, F. O., Dambros, C. S., Coelho, M. T. P., ... & Graham, C. H. (2023). 
-    <i>Accelerated body size evolution in upland environments is correlated with recent speciation in South American freshwater fishes</i>. 
-    <em>Nature Communications</em>, 14, 6070. 
-    <a href="https://doi.org/10.1038/s41467-023-41812-7" target="_blank">https://doi.org/10.1038/s41467-023-41812-7</a>
-  </li>
+            <div class="publication">
+                <h2>The Role of NPP in Biodiversity: Insights from Macroecology</h2>
+                <p>Published in <em>Ecology Letters</em>, this research examines how net primary productivity influences species diversity across various ecosystems.</p>
+                <a href="https://example.com" target="_blank">Read Paper</a>
+            </div>
+        </section>
+    </main>
 
-  <li>
-    Cassemiro, F. A., Albert, J. S., Antonelli, A., Menegotto, A., Wüest, R. O., Cerezer, F. O., ... & Graham, C. H. (2023). 
-    <i>Landscape dynamics and diversification of the megadiverse South American freshwater fish fauna</i>. 
-    <em>Proceedings of the National Academy of Sciences</em>, 120(2), e2211974120. 
-    <a href="https://doi.org/10.1073/pnas.2211974120" target="_blank">https://doi.org/10.1073/pnas.2211974120</a>
-  </li>
-
-  <li>
-    Fiorillo, B. F., Faggioni, G. P., Cerezer, F. O., Becker, C. G., Díaz‐Ricaurte, J. C., & Martins, M. (2023). 
-    <i>Effects of environmental factors on the ecology and survival of a widespread, endemic Cerrado frog</i>. 
-    <em>Biotropica</em>, 55(2), 551-562. 
-    <a href="https://doi.org/10.1111/btp.13209" target="_blank">https://doi.org/10.1111/btp.13209</a>
-  </li>
-
-  <li>
-    Storck, T. R., Sippert, L. R., Seben, D., Lazarotto, D. V., Helfenstein, J., Luz, J. D. S. D., ... & Golombieski, J. I. (2023). 
-    <i>Intensive fish farming: changes in water quality and relationship with zooplankton community</i>. 
-    <em>Acta Limnologica Brasiliensia</em>, 35, e28. 
-    <a href="https://doi.org/10.1590/S2179-975X7422" target="_blank">https://doi.org/10.1590/S2179-975X7422</a>
-  </li>
-
-<li>
-    Cerezer, F. O., Machac, A., Rangel, T. F., & Dambros, C. S. (2022). 
-    <i>Exceptions to the rule: Relative roles of time, diversification rates and regional energy in shaping the inverse latitudinal diversity gradient</i>. 
-    <em>Global Ecology and Biogeography</em>, 31(9), 1794–1809. 
-    <a href="https://doi.org/10.1111/geb.13559" target="_blank">https://doi.org/10.1111/geb.13559</a>
-  </li>
-
-  <li>
-    Cerezer, F. O., Cáceres, N. C., & Baselga, A. (2022). 
-    <i>Species Richness and Beta Diversity Patterns of American Marsupials</i>. 
-    In <em>American and Australasian Marsupials: an evolutionary, biogeographical, and ecological approach</em> (pp. 1–16). Springer International Publishing. 
-    <a href="https://doi.org/10.1007/978-3-031-08419-5_13" target="_blank">https://doi.org/10.1007/978-3-031-08419-5_13</a>
-  </li>
-
-  <li>
-    Cáceres, N. C., Cerezer, F. O., & Bubadué, J. M. (2022). 
-    <i>Size reduction and skull shape parallelism following the evolutionary forest‐to‐savanna transition in Platyrrhini monkeys</i>. 
-    <em>American Journal of Primatology</em>, 84(12), e23447. 
-    <a href="https://doi.org/10.1002/ajp.23447" target="_blank">https://doi.org/10.1002/ajp.23447</a>
-  </li>
-
-  <li>
-    Storck, T. R., do Amaral, A. M. B., da Cruz, T. K. T., de Pellegrin, D., Ames, J., Cerezer, F. O., ... & Clasen, B. (2022). 
-    <i>Biomarkers’ responses in Neotropical freshwater fish living in Southern Brazil: Agricultural activity or seasonal interference?</i> 
-    <em>Water, Air, & Soil Pollution</em>, 233(11), 476. 
-    <a href="https://doi.org/10.1007/s11270-022-05956-4" target="_blank">https://doi.org/10.1007/s11270-022-05956-4</a>
-  </li>
-
-  <li>
-    Ames, J., Miragem, A. A., Cordeiro, M. F., Cerezer, F. O., & Loro, V. L. (2022). 
-    <i>Effects of glyphosate on zebrafish: a systematic review and meta-analysis</i>. 
-    <em>Ecotoxicology</em>, 31(8), 1189–1204. 
-    <a href="https://doi.org/10.1007/s10646-022-02581-z" target="_blank">https://doi.org/10.1007/s10646-022-02581-z</a>
-  </li>
-
-  <li>
-    Quadros, J., Cerezer, F. O., & Cáceres, N. C. (2022). 
-    <i>Hair Microstructure Diversity in Neotropical Marsupials: Roles of Phylogenetic Signal and Adaptation</i>. 
-    In Cáceres, N. C., & Dickman, C. R. (Eds.), <em>American and Australasian Marsupials</em>. Springer, Cham. 
-    <a href="https://doi.org/10.1007/978-3-031-08419-5_9" target="_blank">https://doi.org/10.1007/978-3-031-08419-5_9</a>
-  </li>
-
-  <li>
-    Melo, G. L., Cerezer, F. O., Sponchiado, J., & Cáceres, N. C. (2022). 
-    <i>The role of habitat amount and vegetation density for explaining loss of small-mammal diversity in a South American woodland savanna</i>. 
-    <em>Frontiers in Ecology and Evolution</em>, 10, 740371. 
-    <a href="https://doi.org/10.3389/fevo.2022.740371" target="_blank">https://doi.org/10.3389/fevo.2022.740371</a>
-  </li>
-
-<li>
-  Cerezer, F. O., Cáceres, N. C., & Dambros, C. S. (2021). 
-  <i>Effect of productivity on community size explains the latitudinal diversity gradient of South American small mammals</i>. 
-  <em>The American Naturalist</em>, 198(4), E111–E121. 
-  <a href="https://doi.org/10.1086/716171" target="_blank">https://doi.org/10.1086/716171</a>
-</li>
-
-<li>
-  Cerezer, F. O., Azevedo, R. A., Nascimento, M. A. S., Franklin, E., Morais, J. W., & Dambros, C. S. (2020). 
-  <i>Latitudinal gradient of termite diversity indicates higher diversification and narrower thermal niches in the tropics</i>. 
-  <em>Global Ecology and Biogeography</em>, 00, 1–11. 
-  <a href="https://doi.org/10.1111/geb.13167" target="_blank">https://doi.org/10.1111/geb.13167</a>
-</li>
-
-<li>
-  Cerezer, F. O., Ribeiro, J. R. I., Graipel, M. E., & Cáceres, N. C. (2020). 
-  <i>The dark side of colouration: Ecogeographical evidence supports Gloger's rule in American marsupials</i>. 
-  <em>Evolution</em>, 74, 2046–2058. 
-  <a href="https://doi.org/10.1111/evo.13989" target="_blank">https://doi.org/10.1111/evo.13989</a>
-</li>
-
-<li>
-  Amaral, A. M. B., Moura, L. K., Pellegrin, D., Guerra, L. J., Cerezer, F. O., Saibt, N., Prestes, O. D., Zanella, R., Loro, V. L., & Clasen, B. (2020). 
-  <i>Seasonal factors driving biochemical biomarkers in two fish species from a subtropical reservoir in southern Brazil: An integrated approach</i>. 
-  <em>Environmental Pollution</em>, 00, 115168. 
-  <a href="https://doi.org/10.1016/j.envpol.2020.115168" target="_blank">https://doi.org/10.1016/j.envpol.2020.115168</a>
-</li>
-
-<li>
-  Cerezer, C., Marins, A. T., Cerezer, F. O., Severo, E. S., Leitemperger, J. W., Bandeira, N., Zanella, R., Loro, V. L., & Santos, S. (2020). 
-  <i>Influence of pesticides and abiotic conditions on biochemical biomarkers in Aegla aff. longirostri (Crustacea, Anomura): Implications for conservation</i>. 
-  <em>Ecotoxicology and Environmental Safety</em>, 203, 110982. 
-  <a href="https://doi.org/10.1016/j.ecoenv.2020.110982" target="_blank">https://doi.org/10.1016/j.ecoenv.2020.110982</a>
-</li>
-
-<li>
-  Bubadué, J. M., Hendges, C. D., Cherem, J. J., Cerezer, F. O., Falconí, T. P., Graipel, M. E., & Cáceres, N. C. (2019). 
-  <i>Marsupial versus placental: Assessing the evolutionary changes in the scapula of didelphids and sigmodontines</i>. 
-  <em>Biological Journal of the Linnean Society</em>, XX, 1. 
-  <a href="https://doi.org/10.1093/biolinnean/blz134" target="_blank">https://doi.org/10.1093/biolinnean/blz134</a>
-</li>
-
-<li>
-  Graipel, M. E., Bogoni, J. A., Giehl, E. L. H., Cerezer, F. O., Cáceres, N. C., & Eizirik, E. (2019). 
-  <i>Melanism evolution in the cat family is influenced by intraspecific communication under low visibility</i>. 
-  <em>PLoS One</em>, 14, e0226136. 
-  <a href="https://doi.org/10.1371/journal.pone.0226136" target="_blank">https://doi.org/10.1371/journal.pone.0226136</a>
-</li>
-
-<li>
-  Gonçalves, F. B., Beca, R. S., ..., Cerezer, F. O., Milton, R., & Galetti, M. (2018). 
-  <i>Atlantic Mammal Traits: A data set of morphological traits of mammals in the Atlantic Forest of South America</i>. 
-  <em>Ecology</em>, 99, 498. 
-  <a href="https://doi.org/10.1002/ecy.2106" target="_blank">https://doi.org/10.1002/ecy.2106</a>
-</li>
-
-<li>
-  Battistella, T. F., Cerezer, F. O., Bubadué, J. M., Melo, G. L., Graipel, M. E., & Cáceres, N. C. (2018). 
-  <i>Litter size variation in didelphid marsupials: Evidence of phylogenetic constraints and adaptation</i>. 
-  <em>Biological Journal of the Linnean Society</em>, 126, 40–54. 
-  <a href="https://doi.org/10.1093/biolinnean/bly157" target="_blank">https://doi.org/10.1093/biolinnean/bly157</a>
-</li>
-
-<li>
-  Machado, R. F., Cerezer, F. O., Hendges, C. D., & Cáceres, N. C. (2017). 
-  <i>Factors affecting the home range size of felids (Mammalia, Carnivora) with emphasis on three American species</i>. 
-  <em>Ecología Austral</em>, 27, 232–241. 
-  <a href="https://www.scielo.org.ar/scielo.php?script=sci_arttext&pid=S1667-782X2017000300004&lng=es&nrm=iso" target="_blank">https://www.scielo.org.ar/scielo.php?script=sci_arttext&pid=S1667-782X2017000300004&lng=es&nrm=iso</a>
-</li>
-
-<li>
-  Hendges, C. D., Melo, G. L., Senra Gonçalves, A., Cerezer, F. O., & Cáceres, N. C. (2017). 
-  <i>Landscape attributes as drivers of the geographical variation in density of Sapajus nigritus Kerr, 1792, a primate endemic to the Atlantic Forest</i>. 
-  <em>Acta Oecologica</em>, 84, 57–63. 
-  <a href="https://doi.org/10.1016/j.actao.2017.08.007" target="_blank">https://doi.org/10.1016/j.actao.2017.08.007</a>
-</li>
-
-</ul>
+    <footer>
+        <p>© 2025 Felipe Cerezer. All rights reserved.</p>
+    </footer>
+</body>
+</html>
