--- a/publications.html
+++ b/publications.html
@@ -1,44 +1,102 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Felipe Cerezer - Publications</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="publications.html">Publications</a></li>
-            </ul>
-        </nav>
-    </header>
+<h2>List of Peer-Reviewed Publications</h2>
 
-    <main>
-        <section id="publications">
-            <h1>Selected Publications</h1>
-            <p>Browse through my academic publications that explore the relationships between species, environment, and ecological dynamics.</p>
+<ul>
+  <li>
+    Storck, T. R., do Amaral, A. M. B., da Cruz, T. K. T., Schneider, S. I., Cerezer, F. O., de Oliveira, J. A., ... & Clasen, B. (2025). 
+    <i>Anthropogenic actions alter the aquatic environment quality: biomonitoring study of a river in Southern Brazil</i>. 
+    <em>Aquatic Ecology</em>, 59(1), 185-202. 
+    <a href="https://doi.org/10.1007/s10452-024-10156-9" target="_blank">https://doi.org/10.1007/s10452-024-10156-9</a>
+  </li>
 
-            <div class="publication">
-                <h2>Understanding Species Richness Patterns Across Tetrapod Clades</h2>
-                <p>Published in <em>Global Ecology and Biogeography</em>, this paper investigates how ecological and evolutionary forces shape species richness in terrestrial tetrapod clades.</p>
-                <a href="https://example.com" target="_blank">Read Paper</a>
-            </div>
+  <li>
+    Cerezer, F. O., Campos, A. B., Dambros, C. S., Maestri, R., Bubadué, J. M., & Cáceres, N. C. (2024). 
+    <i>Rodents show darker and redder coloration in warm and rainy environments</i>. 
+    <em>Global Ecology and Biogeography</em>, 33(3), 426-438. 
+    <a href="https://doi.org/10.1111/geb.13802" target="_blank">https://doi.org/10.1111/geb.13802</a>
+  </li>
 
-            <div class="publication">
-                <h2>The Role of NPP in Biodiversity: Insights from Macroecology</h2>
-                <p>Published in <em>Ecology Letters</em>, this research examines how net primary productivity influences species diversity across various ecosystems.</p>
-                <a href="https://example.com" target="_blank">Read Paper</a>
-            </div>
-        </section>
-    </main>
+  <li>
+    Cerezer, F. O., Dambros, C. S., Coelho, M. T. P., ... & Graham, C. H. (2023). 
+    <i>Accelerated body size evolution in upland environments is correlated with recent speciation in South American freshwater fishes</i>. 
+    <em>Nature Communications</em>, 14, 6070. 
+    <a href="https://doi.org/10.1038/s41467-023-41812-7" target="_blank">https://doi.org/10.1038/s41467-023-41812-7</a>
+  </li>
 
-    <footer>
-        <p>© 2025 Felipe Cerezer. All rights reserved.</p>
-    </footer>
-</body>
-</html>
+  <li>
+    Cassemiro, F. A., Albert, J. S., Antonelli, A., Menegotto, A., Wüest, R. O., Cerezer, F. O., ... & Graham, C. H. (2023). 
+    <i>Landscape dynamics and diversification of the megadiverse South American freshwater fish fauna</i>. 
+    <em>Proceedings of the National Academy of Sciences</em>, 120(2), e2211974120. 
+    <a href="https://doi.org/10.1073/pnas.2211974120" target="_blank">https://doi.org/10.1073/pnas.2211974120</a>
+  </li>
+
+  <li>
+    Fiorillo, B. F., Faggioni, G. P., Cerezer, F. O., Becker, C. G., Díaz‐Ricaurte, J. C., & Martins, M. (2023). 
+    <i>Effects of environmental factors on the ecology and survival of a widespread, endemic Cerrado frog</i>. 
+    <em>Biotropica</em>, 55(2), 551-562. 
+    <a href="https://doi.org/10.1111/btp.13209" target="_blank">https://doi.org/10.1111/btp.13209</a>
+  </li>
+
+  <li>
+    Storck, T. R., Sippert, L. R., Seben, D., Lazarotto, D. V., Helfenstein, J., Luz, J. D. S. D., ... & Golombieski, J. I. (2023). 
+    <i>Intensive fish farming: changes in water quality and relationship with zooplankton community</i>. 
+    <em>Acta Limnologica Brasiliensia</em>, 35, e28. 
+    <a href="https://doi.org/10.1590/S2179-975X7422" target="_blank">https://doi.org/10.1590/S2179-975X7422</a>
+  </li>
+
+  <li>
+    Cerezer, F. O., Machac, A., Rangel, T. F., & Dambros, C. S. (2022). 
+    <i>Exceptions to the rule: Relative roles of time, diversification rates and regional energy in shaping the inverse latitudinal diversity gradient</i>. 
+    <em>Global Ecology and Biogeography</em>, 31(9), 1794–1809. 
+    <a href="https://doi.org/10.1111/geb.13559" target="_blank">https://doi.org/10.1111/geb.13559</a>
+  </li>
+
+  <li>
+    Cerezer, F. O., Cáceres, N. C., & Baselga, A. (2022). 
+    <i>Species Richness and Beta Diversity Patterns of American Marsupials</i>. 
+    In <em>American and Australasian Marsupials: an evolutionary, biogeographical, and ecological approach</em> (pp. 1–16). Springer International Publishing. 
+    <a href="https://doi.org/10.1007/978-3-031-08419-5_13" target="_blank">https://doi.org/10.1007/978-3-031-08419-5_13</a>
+  </li>
+
+  <li>
+    Cáceres, N. C., Cerezer, F. O., & Bubadué, J. M. (2022). 
+    <i>Size reduction and skull shape parallelism following the evolutionary forest‐to‐savanna transition in Platyrrhini monkeys</i>. 
+    <em>American Journal of Primatology</em>, 84(12), e23447. 
+    <a href="https://doi.org/10.1002/ajp.23447" target="_blank">https://doi.org/10.1002/ajp.23447</a>
+  </li>
+
+  <li>
+    Storck, T. R., do Amaral, A. M. B., da Cruz, T. K. T., de Pellegrin, D., Ames, J., Cerezer, F. O., ... & Clasen, B. (2022). 
+    <i>Biomarkers’ responses in Neotropical freshwater fish living in Southern Brazil: Agricultural activity or seasonal interference?</i> 
+    <em>Water, Air, & Soil Pollution</em>, 233(11), 476. 
+    <a href="https://doi.org/10.1007/s11270-022-05956-4" target="_blank">https://doi.org/10.1007/s11270-022-05956-4</a>
+  </li>
+
+  <li>
+    Ames, J., Miragem, A. A., Cordeiro, M. F., Cerezer, F. O., & Loro, V. L. (2022). 
+    <i>Effects of glyphosate on zebrafish: a systematic review and meta-analysis</i>. 
+    <em>Ecotoxicology</em>, 31(8), 1189–1204. 
+    <a href="https://doi.org/10.1007/s10646-022-02581-z" target="_blank">https://doi.org/10.1007/s10646-022-02581-z</a>
+  </li>
+
+  <li>
+    Quadros, J., Cerezer, F. O., & Cáceres, N. C. (2022). 
+    <i>Hair Microstructure Diversity in Neotropical Marsupials: Roles of Phylogenetic Signal and Adaptation</i>. 
+    In Cáceres, N. C., & Dickman, C. R. (Eds.), <em>American and Australasian Marsupials</em>. Springer, Cham. 
+    <a href="https://doi.org/10.1007/978-3-031-08419-5_9" target="_blank">https://doi.org/10.1007/978-3-031-08419-5_9</a>
+  </li>
+
+  <li>
+    Melo, G. L., Cerezer, F. O., Sponchiado, J., & Cáceres, N. C. (2022). 
+    <i>The role of habitat amount and vegetation density for explaining loss of small-mammal diversity in a South American woodland savanna</i>. 
+    <em>Frontiers in Ecology and Evolution</em>, 10, 740371. 
+    <a href="https://doi.org/10.3389/fevo.2022.740371" target="_blank">https://doi.org/10.3389/fevo.2022.740371</a>
+  </li>
+
+  <li>
+    Cerezer, F. O., Cáceres, N. C., & Dambros, C. S. (2021). 
+    <i>Effect of productivity on community size explains the latitudinal diversity gradient of South American small mammals</i>. 
+    <em>The American Naturalist</em>, 198(4), E111–E121. 
+    <a href="https://doi.org/10.1086/715704" target="_blank">https://doi.org/10.1086/715704</a>
+  </li>
+
+</ul>
