--- a/publications.html
+++ b/publications.html
@@ -43,7 +43,7 @@
     <a href="https://doi.org/10.1590/S2179-975X7422" target="_blank">https://doi.org/10.1590/S2179-975X7422</a>
   </li>
 
-  <li>
+<li>
     Cerezer, F. O., Machac, A., Rangel, T. F., & Dambros, C. S. (2022). 
     <i>Exceptions to the rule: Relative roles of time, diversification rates and regional energy in shaping the inverse latitudinal diversity gradient</i>. 
     <em>Global Ecology and Biogeography</em>, 31(9), 1794–1809. 
@@ -92,11 +92,81 @@
     <a href="https://doi.org/10.3389/fevo.2022.740371" target="_blank">https://doi.org/10.3389/fevo.2022.740371</a>
   </li>
 
-  <li>
-    Cerezer, F. O., Cáceres, N. C., & Dambros, C. S. (2021). 
-    <i>Effect of productivity on community size explains the latitudinal diversity gradient of South American small mammals</i>. 
-    <em>The American Naturalist</em>, 198(4), E111–E121. 
-    <a href="https://doi.org/10.1086/715704" target="_blank">https://doi.org/10.1086/715704</a>
-  </li>
+<li>
+  Cerezer, F. O., Cáceres, N. C., & Dambros, C. S. (2021). 
+  <i>Effect of productivity on community size explains the latitudinal diversity gradient of South American small mammals</i>. 
+  <em>The American Naturalist</em>, 198(4), E111–E121. 
+  <a href="https://doi.org/10.1086/716171" target="_blank">https://doi.org/10.1086/716171</a>
+</li>
+
+<li>
+  Cerezer, F. O., Azevedo, R. A., Nascimento, M. A. S., Franklin, E., Morais, J. W., & Dambros, C. S. (2020). 
+  <i>Latitudinal gradient of termite diversity indicates higher diversification and narrower thermal niches in the tropics</i>. 
+  <em>Global Ecology and Biogeography</em>, 00, 1–11. 
+  <a href="https://doi.org/10.1111/geb.13167" target="_blank">https://doi.org/10.1111/geb.13167</a>
+</li>
+
+<li>
+  Cerezer, F. O., Ribeiro, J. R. I., Graipel, M. E., & Cáceres, N. C. (2020). 
+  <i>The dark side of colouration: Ecogeographical evidence supports Gloger's rule in American marsupials</i>. 
+  <em>Evolution</em>, 74, 2046–2058. 
+  <a href="https://doi.org/10.1111/evo.13989" target="_blank">https://doi.org/10.1111/evo.13989</a>
+</li>
+
+<li>
+  Amaral, A. M. B., Moura, L. K., Pellegrin, D., Guerra, L. J., Cerezer, F. O., Saibt, N., Prestes, O. D., Zanella, R., Loro, V. L., & Clasen, B. (2020). 
+  <i>Seasonal factors driving biochemical biomarkers in two fish species from a subtropical reservoir in southern Brazil: An integrated approach</i>. 
+  <em>Environmental Pollution</em>, 00, 115168. 
+  <a href="https://doi.org/10.1016/j.envpol.2020.115168" target="_blank">https://doi.org/10.1016/j.envpol.2020.115168</a>
+</li>
+
+<li>
+  Cerezer, C., Marins, A. T., Cerezer, F. O., Severo, E. S., Leitemperger, J. W., Bandeira, N., Zanella, R., Loro, V. L., & Santos, S. (2020). 
+  <i>Influence of pesticides and abiotic conditions on biochemical biomarkers in Aegla aff. longirostri (Crustacea, Anomura): Implications for conservation</i>. 
+  <em>Ecotoxicology and Environmental Safety</em>, 203, 110982. 
+  <a href="https://doi.org/10.1016/j.ecoenv.2020.110982" target="_blank">https://doi.org/10.1016/j.ecoenv.2020.110982</a>
+</li>
+
+<li>
+  Bubadué, J. M., Hendges, C. D., Cherem, J. J., Cerezer, F. O., Falconí, T. P., Graipel, M. E., & Cáceres, N. C. (2019). 
+  <i>Marsupial versus placental: Assessing the evolutionary changes in the scapula of didelphids and sigmodontines</i>. 
+  <em>Biological Journal of the Linnean Society</em>, XX, 1. 
+  <a href="https://doi.org/10.1093/biolinnean/blz134" target="_blank">https://doi.org/10.1093/biolinnean/blz134</a>
+</li>
+
+<li>
+  Graipel, M. E., Bogoni, J. A., Giehl, E. L. H., Cerezer, F. O., Cáceres, N. C., & Eizirik, E. (2019). 
+  <i>Melanism evolution in the cat family is influenced by intraspecific communication under low visibility</i>. 
+  <em>PLoS One</em>, 14, e0226136. 
+  <a href="https://doi.org/10.1371/journal.pone.0226136" target="_blank">https://doi.org/10.1371/journal.pone.0226136</a>
+</li>
+
+<li>
+  Gonçalves, F. B., Beca, R. S., ..., Cerezer, F. O., Milton, R., & Galetti, M. (2018). 
+  <i>Atlantic Mammal Traits: A data set of morphological traits of mammals in the Atlantic Forest of South America</i>. 
+  <em>Ecology</em>, 99, 498. 
+  <a href="https://doi.org/10.1002/ecy.2106" target="_blank">https://doi.org/10.1002/ecy.2106</a>
+</li>
+
+<li>
+  Battistella, T. F., Cerezer, F. O., Bubadué, J. M., Melo, G. L., Graipel, M. E., & Cáceres, N. C. (2018). 
+  <i>Litter size variation in didelphid marsupials: Evidence of phylogenetic constraints and adaptation</i>. 
+  <em>Biological Journal of the Linnean Society</em>, 126, 40–54. 
+  <a href="https://doi.org/10.1093/biolinnean/bly157" target="_blank">https://doi.org/10.1093/biolinnean/bly157</a>
+</li>
+
+<li>
+  Machado, R. F., Cerezer, F. O., Hendges, C. D., & Cáceres, N. C. (2017). 
+  <i>Factors affecting the home range size of felids (Mammalia, Carnivora) with emphasis on three American species</i>. 
+  <em>Ecología Austral</em>, 27, 232–241. 
+  <a href="https://www.scielo.org.ar/scielo.php?script=sci_arttext&pid=S1667-782X2017000300004&lng=es&nrm=iso" target="_blank">https://www.scielo.org.ar/scielo.php?script=sci_arttext&pid=S1667-782X2017000300004&lng=es&nrm=iso</a>
+</li>
+
+<li>
+  Hendges, C. D., Melo, G. L., Senra Gonçalves, A., Cerezer, F. O., & Cáceres, N. C. (2017). 
+  <i>Landscape attributes as drivers of the geographical variation in density of Sapajus nigritus Kerr, 1792, a primate endemic to the Atlantic Forest</i>. 
+  <em>Acta Oecologica</em>, 84, 57–63. 
+  <a href="https://doi.org/10.1016/j.actao.2017.08.007" target="_blank">https://doi.org/10.1016/j.actao.2017.08.007</a>
+</li>
 
 </ul>
