--- a/about.html
+++ b/about.html
@@ -8,7 +8,8 @@
     
     <!-- Link to Font Awesome CDN for Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
+    
+    <!-- Link to custom styles -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -31,56 +32,34 @@
 
         <p>When I'm not immersed in research, I enjoy being outdoors. I like playing football, volleyball, paddleboarding, and hiking. These activities keep me active and deepen my appreciation for the environment.</p>
 
-        <!-- Nature Images -->
-        <div class="nature-images" style="display: flex; justify-content: space-between; gap: 15px; flex-wrap: wrap;">
-            <img src="pic1.jpeg" alt="Nature Photo 1" style="width: 100%; max-width: 200px; height: auto; object-fit: cover;">
-            <img src="pic2.jpeg" alt="Nature Photo 2" style="width: 100%; max-width: 200px; height: auto; object-fit: cover;">
-            <img src="pic3.jpeg" alt="Nature Photo 3" style="width: 100%; max-width: 200px; height: auto; object-fit: cover;">
-            <img src="pic4.jpeg" alt="Nature Photo 4" style="width: 100%; max-width: 200px; height: auto; object-fit: cover;">
-            <img src="pic5.jpeg" alt="Nature Photo 5" style="width: 100%; max-width: 200px; height: auto; object-fit: cover;">
+        <!-- Nature Images Section with More Structured Layout -->
+        <div class="nature-images">
+            <img src="pic1.jpeg" alt="Nature Photo 1">
+            <img src="pic2.jpeg" alt="Nature Photo 2">
+            <img src="pic3.jpeg" alt="Nature Photo 3">
+            <img src="pic4.jpeg" alt="Nature Photo 4">
+            <img src="pic5.jpeg" alt="Nature Photo 5">
         </div>
 
+        <!-- Professional Experience Section with Boxed Layout -->
         <h2>Professional Experience</h2>
         <div class="experience">
-            <h3>2024 - Present <i class="fas fa-briefcase"></i></h3>
-            <p><strong>Postdoctoral Fellow Researcher</strong><br>
-            <i class="fas fa-building"></i> Czech Academy of Sciences, Czech Republic<br>
-            <i class="fas fa-flask"></i> Researcher at the project STANDARD – Diversity dynamics across scales (PI Antonin Machac)</p>
+            <div class="job">
+                <h3>2024 - Present <i class="fas fa-briefcase"></i></h3>
+                <p><strong>Postdoctoral Fellow Researcher</strong><br>
+                <i class="fas fa-building"></i> Czech Academy of Sciences, Czech Republic<br>
+                <i class="fas fa-flask"></i> Researcher at the project STANDARD – Diversity dynamics across scales (PI Antonin Machac)</p>
+            </div>
 
-            <h3>2023 - Present <i class="fas fa-briefcase"></i></h3>
-            <p><strong>Postdoctoral Fellow Researcher</strong><br>
-            <i class="fas fa-building"></i> Charles University, Czech Republic<br>
-            <i class="fas fa-flask"></i> Researcher at the project EXPRO – The equilibrium theory of biodiversity dynamics – macroecological perspective (PI David Storch)</p>
+            <div class="job">
+                <h3>2023 - Present <i class="fas fa-briefcase"></i></h3>
+                <p><strong>Postdoctoral Fellow Researcher</strong><br>
+                <i class="fas fa-building"></i> Charles University, Czech Republic<br>
+                <i class="fas fa-flask"></i> Researcher at the project EXPRO – The equilibrium theory of biodiversity dynamics – macroecological perspective (PI David Storch)</p>
+            </div>
 
-            <h3>2021 - 2022 <i class="fas fa-briefcase"></i></h3>
-            <p><strong>Visiting PhD Student</strong><br>
-            <i class="fas fa-building"></i> Swiss Federal Research Institute for Forest, Snow and Landscape (WSL), Switzerland<br>
-            <i class="fas fa-flask"></i> Research theme: Accelerated body size evolution in upland environments drives recent speciation in South American freshwater fishes</p>
-
-            <h3>2017 - 2023 <i class="fas fa-briefcase"></i></h3>
-            <p><strong>Postgraduate Student Researcher</strong><br>
-            <i class="fas fa-building"></i> Federal University of Santa Maria, Brazil<br>
-            <i class="fas fa-flask"></i> <span>Performed research related to my MSc and PhD studies (see details below)</span></p>
-        </div>
-
-        <h2>Education</h2>
-        <div class="education">
-            <h3>PhD - Animal Biodiversity</h3>
-            <p><strong>2019 - 2023</strong><br>
-            <i class="fas fa-university"></i> Federal University of Santa Maria, Brazil<br>
-            <i class="fas fa-flask"></i> PhD theme: The role of evolutionary and ecological processes in species diversity and coloration patterns (PI Cristian Dambros)</p>
-
-            <h3>MSc - Animal Biodiversity</h3>
-            <p><strong>2017 - 2019</strong><br>
-            <i class="fas fa-university"></i> Federal University of Santa Maria, Brazil<br>
-            <i class="fas fa-flask"></i> MSc theme: Effects of productivity on speciation-extinction dynamics drive the latitudinal diversity gradient of South American small mammals (PI Cristian Dambros)</p>
-
-            <h3>BSc - Biological Sciences</h3>
-            <p><strong>2013 - 2017</strong><br>
-            <i class="fas fa-university"></i> Federal University of Santa Maria, Brazil<br>
-            <i class="fas fa-flask"></i> BSc theme: Adaptive evolution of facial coloration patterns in didelphid marsupials (PI Nilton Cáceres)</p>
-        </div>
-    </section>
-
-</body>
-</html>
+            <div class="job">
+                <h3>2021 - 2022 <i class="fas fa-briefcase"></i></h3>
+                <p><strong>Visiting PhD Student</strong><br>
+                <i class="fas fa-building"></i> Swiss Federal Research Institute for Forest, Snow and Landscape (WSL), Switzerland<br>
+                <i class="fas fa-flask"></i> Research theme: Accelerated body size evolution in upland environments drives recent speciation in South American freshwater fishes</p>
