--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
     <!-- Main Content Section -->
     <section class="profile-section">
+        <!-- Left Column: Photo -->
         <div class="left-column">
             <img src="profile_pic.jpeg" alt="Felipe O. Cerezer" class="profile-img">
             
@@ -56,53 +57,6 @@
                 <p>If you're interested in learning more or collaborating, feel free to reach out.</p>
                 <a href="CV_Felipe_Cerezer.pdf" target="_blank" title="Download CV">For more details, check out my CV (PDF)</a>
             </div>
-        </div>
-    </section>
-
-    <!-- Professional Experience Box -->
-    <section class="content-box" style="background-color: #f1f1f1; padding: 20px; margin: 20px 0;">
-        <h2>Professional Experience</h2>
-        <div class="experience">
-            <h3>2024 - Present <i class="fas fa-briefcase"></i></h3>
-            <p><strong>Postdoctoral Fellow Researcher</strong><br>
-            <i class="fas fa-building"></i> Czech Academy of Sciences, Czech Republic<br>
-            <i class="fas fa-flask"></i> Researcher at the project STANDARD – Diversity dynamics across scales (PI Antonin Machac)</p>
-
-            <h3>2023 - Present <i class="fas fa-briefcase"></i></h3>
-            <p><strong>Postdoctoral Fellow Researcher</strong><br>
-            <i class="fas fa-building"></i> Charles University, Czech Republic<br>
-            <i class="fas fa-flask"></i> Researcher at the project EXPRO – The equilibrium theory of biodiversity dynamics – macroecological perspective (PI David Storch)</p>
-
-            <h3>2021 - 2022 <i class="fas fa-briefcase"></i></h3>
-            <p><strong>Visiting PhD Student</strong><br>
-            <i class="fas fa-building"></i> Swiss Federal Research Institute for Forest, Snow and Landscape (WSL), Switzerland<br>
-            <i class="fas fa-flask"></i> Research theme: Accelerated body size evolution in upland environments drives recent speciation in South American freshwater fishes</p>
-
-            <h3>2017 - 2023 <i class="fas fa-briefcase"></i></h3>
-            <p><strong>Postgraduate Student Researcher</strong><br>
-            <i class="fas fa-building"></i> Federal University of Santa Maria, Brazil<br>
-            <i class="fas fa-flask"></i> Performed research related to MSc and PhD studies</p>
-        </div>
-    </section>
-
-    <!-- Education Box -->
-    <section class="content-box" style="background-color: #e8f0f7; padding: 20px; margin: 20px 0;">
-        <h2>Education</h2>
-        <div class="education">
-            <h3>PhD - Animal Biodiversity</h3>
-            <p><strong>2019 - 2023</strong><br>
-            <i class="fas fa-university"></i> Federal University of Santa Maria, Brazil<br>
-            <i class="fas fa-flask"></i> PhD theme: The role of evolutionary and ecological processes in species diversity and coloration patterns (PI Cristian Dambros)</p>
-
-            <h3>MSc - Animal Biodiversity</h3>
-            <p><strong>2017 - 2019</strong><br>
-            <i class="fas fa-university"></i> Federal University of Santa Maria, Brazil<br>
-            <i class="fas fa-flask"></i> MSc theme: Effects of productivity on speciation-extinction dynamics drive the latitudinal diversity gradient of South American small mammals (PI Cristian Dambros)</p>
-
-            <h3>BSc - Biological Sciences</h3>
-            <p><strong>2013 - 2017</strong><br>
-            <i class="fas fa-university"></i> Federal University of Santa Maria, Brazil<br>
-            <i class="fas fa-flask"></i> BSc theme: Adaptive evolution of facial coloration patterns in didelphid marsupials (PI Nilton Cáceres)</p>
         </div>
     </section>
 
