--- a/about.html
+++ b/about.html
@@ -1,112 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Felipe O. Cerezer - About</title>
+    <title>About Felipe</title>
 
-    <!-- Google Fonts & Font Awesome -->
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;600&display=swap" rel="stylesheet">
+    <!-- Font Awesome for optional icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
-    <!-- Custom CSS -->
+    
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
 
-    <!-- Navigation -->
+<body>
     <header>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="projects.html">Projects</a>
-            <a href="about.html" class="active">About</a>
-            <a href="publications.html">Publications</a>
+        <nav class="navbar">
+            <div class="nav-container">
+                <a href="index.html" class="nav-link">Home</a>
+                <a href="projects.html" class="nav-link">Projects</a>
+                <a href="about.html" class="nav-link active">About</a>
+                <a href="publications.html" class="nav-link">Publications</a>
+            </div>
         </nav>
     </header>
 
-    <!-- Hero Section -->
-    <section class="hero">
-        <h1>Hello, I'm Felipe O. Cerezer</h1>
-        <p>Macroecologist | Biogeographer | Evolutionary Ecologist</p>
-    </section>
-
-    <!-- About Section -->
     <section class="about-section">
-        <h2>About Me</h2>
-        <p>Since high school, I've known I wanted to be a biologist. My passion for ecology and the complex mechanisms of nature was ignited during my bachelor’s studies.</p>
-        <p>Originally from <a href="https://pt.wikipedia.org/wiki/Ivor%C3%A1" target="_blank">Ivorá</a>, a charming countryside town nestled between the Atlantic Forest and the Pampa grasslands in southern Brazil, my roots have deeply influenced my love for the natural world. I pursued my undergraduate and graduate studies in Santa Maria, Brazil, where my academic journey began.</p>
+        <h1>About Me</h1>
+        <p>Hello! I'm Felipe O. Cerezer, a biologist passionate about understanding large-scale patterns of biodiversity. 
+            I am currently a postdoctoral fellow at the Czech Academy of Sciences and Charles University in the Czech Republic. 
+            My research lies at the intersection of macroecology, macroevolution, and biogeography. I aim to uncover how historical, 
+            evolutionary, and ecological processes shape the distribution of life on Earth.</p>
 
-        <blockquote class="quote">“Understanding biodiversity patterns requires a deep dive into nature’s evolutionary history.”</blockquote>
+        <p>I was born in <a href="https://pt.wikipedia.org/wiki/Ivor%C3%A1" target="_blank">Ivorá</a>, a small town in southern Brazil, 
+            nestled between the Atlantic Forest and the Pampa. I earned my BSc, MSc, and PhD in Biology at the Federal University of Santa Maria. 
+            During my PhD, I had the opportunity to be a visiting researcher at WSL in Switzerland. I'm especially interested in how speciation, 
+            extinction, and environmental factors like temperature and productivity interact to drive biodiversity patterns across regions and clades.</p>
 
-        <p>When I'm not immersed in research, I enjoy being outdoors—playing football, volleyball, paddleboarding, or hiking. These activities keep me active and grounded in the beauty of nature.</p>
+        <p>Outside of academia, I enjoy outdoor activities like playing football and volleyball, hiking, and paddleboarding.</p>
 
-        <!-- Images -->
         <div class="nature-images">
-            <img src="pic1.jpeg" alt="Nature Photo 1">
-            <img src="pic2.jpeg" alt="Nature Photo 2">
-            <img src="pic3.jpeg" alt="Nature Photo 3">
-            <img src="pic4.jpeg" alt="Nature Photo 4">
-            <img src="pic5.jpeg" alt="Nature Photo 5">
-        </div>
-
-        <!-- Experience -->
-        <div class="box experience">
-            <h2>Professional Experience</h2>
-
-            <h3>2024 – Present <i class="fas fa-briefcase"></i></h3>
-            <p><strong>Postdoctoral Fellow Researcher</strong><br>
-            <i class="fas fa-building"></i> Czech Academy of Sciences, Czech Republic<br>
-            <i class="fas fa-flask"></i> Project STANDARD – Diversity dynamics across scales (PI Antonin Machac)</p>
-
-            <h3>2023 – Present <i class="fas fa-briefcase"></i></h3>
-            <p><strong>Postdoctoral Fellow Researcher</strong><br>
-            <i class="fas fa-building"></i> Charles University, Czech Republic<br>
-            <i class="fas fa-flask"></i> Project EXPRO – Biodiversity equilibrium theory (PI David Storch)</p>
-
-            <h3>2021 – 2022 <i class="fas fa-briefcase"></i></h3>
-            <p><strong>Visiting PhD Student</strong><br>
-            <i class="fas fa-building"></i> WSL, Switzerland<br>
-            <i class="fas fa-flask"></i> Theme: Body size evolution & speciation in South American freshwater fishes</p>
-
-            <h3>2017 – 2023 <i class="fas fa-briefcase"></i></h3>
-            <p><strong>Postgraduate Researcher</strong><br>
-            <i class="fas fa-building"></i> Federal University of Santa Maria, Brazil<br>
-            <i class="fas fa-flask"></i> MSc & PhD projects in macroecology and evolutionary biology</p>
-        </div>
-
-        <!-- Education -->
-        <div class="box education">
-            <h2>Education</h2>
-
-            <h3>PhD – Animal Biodiversity</h3>
-            <p><strong>2019 – 2023</strong><br>
-            <i class="fas fa-university"></i> Federal University of Santa Maria, Brazil<br>
-            <i class="fas fa-flask"></i> Theme: Evolutionary and ecological processes shaping diversity and coloration (PI Cristian Dambros)</p>
-
-            <h3>MSc – Animal Biodiversity</h3>
-            <p><strong>2017 – 2019</strong><br>
-            <i class="fas fa-university"></i> Federal University of Santa Maria, Brazil<br>
-            <i class="fas fa-flask"></i> Theme: Productivity, speciation-extinction dynamics, and latitudinal diversity (PI Cristian Dambros)</p>
-
-            <h3>BSc – Biological Sciences</h3>
-            <p><strong>2013 – 2017</strong><br>
-            <i class="fas fa-university"></i> Federal University of Santa Maria, Brazil<br>
-            <i class="fas fa-flask"></i> Theme: Adaptive evolution of facial coloration in didelphid marsupials (PI Nilton Cáceres)</p>
+            <img src="pic1.jpeg" alt="Nature 1">
+            <img src="pic2.jpeg" alt="Nature 2">
+            <img src="pic3.jpeg" alt="Nature 3">
+            <img src="pic4.jpeg" alt="Nature 4">
+            <img src="pic5.jpeg" alt="Nature 5">
         </div>
     </section>
-
-    <!-- Animation Script -->
-    <script>
-        const boxes = document.querySelectorAll('.box');
-        const observer = new IntersectionObserver(entries => {
-            entries.forEach(entry => {
-                if (entry.isIntersecting) {
-                    entry.target.classList.add('show');
-                }
-            });
-        });
-        boxes.forEach(box => observer.observe(box));
-    </script>
-
 </body>
 </html>
