--- a/about.html
+++ b/about.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Felipe</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Felipe O. Cerezer - About</title>
+    
+    <!-- Link to Font Awesome CDN for Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
+
+    <!-- Header Navigation -->
     <header>
         <nav>
             <a href="index.html">Home</a>
@@ -18,27 +23,66 @@
         </nav>
     </header>
 
+    <!-- Main Content Section (About Me Section) -->
     <section class="about-section">
-        <h1>About Me</h1>
-        <p>Hello! I'm Felipe O. Cerezer, a biologist passionate about understanding large-scale patterns of biodiversity. 
-            I am currently a postdoctoral fellow at the Czech Academy of Sciences and Charles University in the Czech Republic. 
-            My research lies at the intersection of macroecology, macroevolution, and biogeography. I aim to uncover how historical, 
-            evolutionary, and ecological processes shape the distribution of life on Earth.</p>
+        <h1>About Me!</h1>
 
-        <p>I was born in <a href="https://pt.wikipedia.org/wiki/Ivor%C3%A1" target="_blank">Ivorá</a>, a small town in southern Brazil, 
-            nestled between the Atlantic Forest and the Pampa. I earned my BSc, MSc, and PhD in Biology at the Federal University of Santa Maria. 
-            During my PhD, I had the opportunity to be a visiting researcher at WSL in Switzerland. I'm especially interested in how speciation, 
-            extinction, and environmental factors like temperature and productivity interact to drive biodiversity patterns across regions and clades.</p>
+        <p>Since high school, I've known I wanted to be a biologist. My passion for ecology and the complex mechanisms of nature was ignited during my bachelor’s studies. Originally from <a href="https://pt.wikipedia.org/wiki/Ivor%C3%A1" target="_blank">Ivorá</a>, a charming countryside town nestled between the Atlantic Forest and the Pampa grasslands in southern Brazil, my roots have deeply influenced my love for the natural world. I pursued my undergraduate and graduate studies in Santa Maria, Rio Grande do Sul, Brazil, where my academic journey started. </p>
 
-        <p>Outside of academia, I enjoy outdoor activities like playing football and volleyball, hiking, and paddleboarding.</p>
+        <p>When I'm not immersed in research, I enjoy being outdoors. I like playing football, volleyball, paddleboarding, and hiking. These activities keep me active and deepen my appreciation for the environment.</p>
 
+        <!-- Nature Images -->
         <div class="nature-images">
-            <img src="pic1.jpeg" alt="Nature 1">
-            <img src="pic2.jpeg" alt="Nature 2">
-            <img src="pic3.jpeg" alt="Nature 3">
-            <img src="pic4.jpeg" alt="Nature 4">
-            <img src="pic5.jpeg" alt="Nature 5">
+            <img src="pic1.jpeg" alt="Nature Photo 1">
+            <img src="pic2.jpeg" alt="Nature Photo 2">
+            <img src="pic3.jpeg" alt="Nature Photo 3">
+            <img src="pic4.jpeg" alt="Nature Photo 4">
+            <img src="pic5.jpeg" alt="Nature Photo 5">
+        </div>
+
+        <!-- Professional Experience Box -->
+        <div class="box experience">
+            <h2>Professional Experience</h2>
+            <h3>2024 - Present <i class="fas fa-briefcase"></i></h3>
+            <p><strong>Postdoctoral Fellow Researcher</strong><br>
+            <i class="fas fa-building"></i> Czech Academy of Sciences, Czech Republic<br>
+            <i class="fas fa-flask"></i> Researcher at the project STANDARD – Diversity dynamics across scales (PI Antonin Machac)</p>
+
+            <h3>2023 - Present <i class="fas fa-briefcase"></i></h3>
+            <p><strong>Postdoctoral Fellow Researcher</strong><br>
+            <i class="fas fa-building"></i> Charles University, Czech Republic<br>
+            <i class="fas fa-flask"></i> Researcher at the project EXPRO – The equilibrium theory of biodiversity dynamics – macroecological perspective (PI David Storch)</p>
+
+            <h3>2021 - 2022 <i class="fas fa-briefcase"></i></h3>
+            <p><strong>Visiting PhD Student</strong><br>
+            <i class="fas fa-building"></i> Swiss Federal Research Institute for Forest, Snow and Landscape (WSL), Switzerland<br>
+            <i class="fas fa-flask"></i> Research theme: Accelerated body size evolution in upland environments drives recent speciation in South American freshwater fishes</p>
+
+            <h3>2017 - 2023 <i class="fas fa-briefcase"></i></h3>
+            <p><strong>Postgraduate Student Researcher</strong><br>
+            <i class="fas fa-building"></i> Federal University of Santa Maria, Brazil<br>
+            <i class="fas fa-flask"></i> Performed research related to my MSc and PhD studies (see details below)</p>
+        </div>
+
+        <!-- Education Box -->
+        <div class="box education">
+            <h2>Education</h2>
+            <h3>PhD - Animal Biodiversity</h3>
+            <p><strong>2019 - 2023</strong><br>
+            <i class="fas fa-university"></i> Federal University of Santa Maria, Brazil<br>
+            <i class="fas fa-flask"></i> PhD theme: The role of evolutionary and ecological processes in species diversity and coloration patterns (PI Cristian Dambros)</p>
+
+            <h3>MSc - Animal Biodiversity</h3>
+            <p><strong>2017 - 2019</strong><br>
+            <i class="fas fa-university"></i> Federal University of Santa Maria, Brazil<br>
+            <i class="fas fa-flask"></i> MSc theme: Effects of productivity on speciation-extinction dynamics drive the latitudinal diversity gradient of South American small mammals (PI Cristian Dambros)</p>
+
+            <h3>BSc - Biological Sciences</h3>
+            <p><strong>2013 - 2017</strong><br>
+            <i class="fas fa-university"></i> Federal University of Santa Maria, Brazil<br>
+            <i class="fas fa-flask"></i> BSc theme: Adaptive evolution of facial coloration patterns in didelphid marsupials (PI Nilton Cáceres)</p>
         </div>
     </section>
+
 </body>
 </html>
