--- a/publications.html
+++ b/publications.html
@@ -58,7 +58,7 @@
     }
 
     strong {
-      font-weight: bold;
+      font-weight: normal; /* Ensures other authors are not bolded */
       color: #333;
     }
 
@@ -92,7 +92,6 @@
         <strong>Storck, T. R., do Amaral, A. M. B., da Cruz, T. K. T., Schneider, S. I., <em>Cerezer, F. O.</em>, de Oliveira, J. A., ... & Clasen, B. (2025).</strong>
         <i>Anthropogenic actions alter the aquatic environment quality: biomonitoring study of a river in Southern Brazil</i>.
         <em>Aquatic Ecology</em>, 59(1), 185-202.
-        <a href="https://doi.org/10.1007/s10452-024-10156-9" target="_blank">https://doi.org/10.1007/s10452-024-10156-9</a>
         <p class="doi">DOI: <a href="https://doi.org/10.1007/s10452-024-10156-9" target="_blank">10.1007/s10452-024-10156-9</a></p>
       </li>
 
@@ -100,7 +99,6 @@
         <strong><em>Cerezer, F. O.</em>, Campos, A. B., Dambros, C. S., Maestri, R., Bubadué, J. M., & Cáceres, N. C. (2024).</strong>
         <i>Rodents show darker and redder coloration in warm and rainy environments</i>.
         <em>Global Ecology and Biogeography</em>, 33(3), 426-438.
-        <a href="https://doi.org/10.1111/geb.13802" target="_blank">https://doi.org/10.1111/geb.13802</a>
         <p class="doi">DOI: <a href="https://doi.org/10.1111/geb.13802" target="_blank">10.1111/geb.13802</a></p>
       </li>
 
@@ -108,12 +106,11 @@
         <strong><em>Cerezer, F. O.</em>, Dambros, C. S., Coelho, M. T. P., ... & Graham, C. H. (2023).</strong>
         <i>Accelerated body size evolution in upland environments is correlated with recent speciation in South American freshwater fishes</i>.
         <em>Nature Communications</em>, 14, 6070.
-        <a href="https://doi.org/10.1038/s41467-023-41812-7" target="_blank">https://doi.org/10.1038/s41467-023-41812-7</a>
         <p class="doi">DOI: <a href="https://doi.org/10.1038/s41467-023-41812-7" target="_blank">10.1038/s41467-023-41812-7</a></p>
       </li>
 
       <!-- Repeat the same structure for all other publications -->
-      
+
     </ul>
   </div>
 </body>
