--- a/projects.html
+++ b/projects.html
@@ -118,7 +118,7 @@
     <a href="index.html">Home</a>
     <a href="projects.html">Projects</a>
     <a href="publications.html">Publications</a>
-    <a href="contact.html">Contact</a>
+    <a href="about.html">About</a>
   </nav>
 
   <!-- CONTENT -->
