--- a/publications.html
+++ b/publications.html
@@ -121,11 +121,11 @@
     <h2>List of Peer-Reviewed Publications</h2>
     <ul>
       <li>
-        <strong>Storck, T. R., do Amaral, A. M. B., da Cruz, T. K. T., Schneider, S. I., <em>Cerezer, F. O.</em>, de Oliveira, J. A., ... & Clasen, B. (2025).</strong>
-        <i>Anthropogenic actions alter the aquatic environment quality: biomonitoring study of a river in Southern Brazil</i>.
-        <em>Aquatic Ecology</em>, 59(1), 185-202.
-        <p class="doi">DOI: <a class="doi-link" href="https://doi.org/10.1007/s10452-024-10156-9" target="_blank">10.1007/s10452-024-10156-9</a></p>
-      </li>
+    <strong>Storck, T. R., do Amaral, A. M. B., da Cruz, T. K. T., Schneider, S. I., <strong>Cerezer, F. O.</strong>, de Oliveira, J. A., ... & Clasen, B. (2025).</strong>
+    <i>Anthropogenic actions alter the aquatic environment quality: biomonitoring study of a river in Southern Brazil</i>.
+    <em>Aquatic Ecology</em>, 59(1), 185-202.
+    <p class="doi">DOI: <a class="doi-link" href="https://doi.org/10.1007/s10452-024-10156-9" target="_blank">10.1007/s10452-024-10156-9</a></p>
+</li>
 
       <li>
         <strong><em>Cerezer, F. O.</em>, Campos, A. B., Dambros, C. S., Maestri, R., Bubadué, J. M., & Cáceres, N. C. (2024).</strong>
